--- a/renderer/locales/ru.json
+++ b/renderer/locales/ru.json
@@ -1,5 +1,217 @@
 {
-  "settings": {
-    "language": "Меняй язык"
+  "TITLE": "Upscayl",
+  "INTRO": "Представляем Upscayl Cloud!",
+  "HEADER": {
+    "GITHUB_BUTTON_TITLE": "Оцените нас на GitHub 😁",
+    "DESCRIPTION": "AI увеличитель изображений"
+  },
+  "FOOTER": {
+    "NEWS_TITLE": "НОВОСТИ UPSCAYL",
+    "COPYRIGHT": "Авторское право ©",
+    "TITLE": "От ",
+    "LINK_TITLE": "Команда Upscayl"
+  },
+  "SETTINGS": {
+    "TITLE": "НАСТРОЙКИ",
+    "CHANGE_LANGUAGE": { "TITLE": "Сменить язык" },
+    "IMAGE_COMPRESSION": {
+      "TITLE": "Сжатие изображения",
+      "DESCRIPTION": "Сжатие PNG без потерь, поэтому размер файла может не значительно уменьшиться, а более высокие значения сжатия могут повлиять на производительность. Сжатие JPG и WebP с потерями."
+    },
+    "CUSTOM_MODELS": {
+      "TITLE": "ДОБАВИТЬ ПОЛЬЗОВАТЕЛЬСКИЕ МОДЕЛИ",
+      "BUTTON_FOLDER": "Выбрать папку",
+      "DESCRIPTION": "Вы можете легко добавить свои модели. Для получения дополнительной информации:",
+      "LINK_TITLE": "Репозиторий пользовательских моделей"
+    },
+    "CUSTOM_INPUT_RESOLUTION": {
+      "TITLE": "ПОЛЬЗОВАТЕЛЬСКАЯ ШИРИНА ВЫХОДА",
+      "RESTART": "ТРЕБУЕТСЯ ПЕРЕЗАПУСК",
+      "DESCRIPTION": "Используйте пользовательскую ширину для выходных изображений. Высота будет скорректирована автоматически. Включение этой функции заменит настройку масштаба."
+    },
+    "DONATE": {
+      "DESCRIPTION": "Если вам нравится то, что мы делаем :)",
+      "BUTTON_TITLE": "💎 ПОЖЕРТВОВАТЬ"
+    },
+    "GPU_ID_INPUT": {
+      "TITLE": "ID GPU",
+      "DESCRIPTION": "Пожалуйста, прочитайте документацию Upscayl для получения дополнительной информации.",
+      "ADDITIONAL_DESCRIPTION": "Включите режим производительности на Windows для лучших результатов."
+    },
+    "IMAGE_FORMAT": {
+      "TITLE": "СОХРАНИТЬ ИЗОБРАЖЕНИЕ КАК",
+      "PNG": "PNG",
+      "JPG": "JPG",
+      "WEBP": "WEBP"
+    },
+    "IMAGE_SCALE": {
+      "TITLE": "Масштаб изображения",
+      "DESCRIPTION": "Любое значение выше 4X (кроме 16X Double Upscayl) только изменяет размер изображения и не использует AI-увеличение.",
+      "WARNING": "Любое значение выше 5X может вызвать проблемы с производительностью на некоторых устройствах!",
+      "ADDITIONAL_WARNING": "Это может вызвать проблемы с производительностью на некоторых устройствах!"
+    },
+    "LOG_AREA": {
+      "ON_COPY": "СКОПИРОВАНО ✅",
+      "BUTTON_TITLE": "СКОПИРОВАТЬ ЛОГИ 📋",
+      "NO_LOGS": "Нет логов для отображения"
+    },
+    "OVERWRITE_TOGGLE": {
+      "TITLE": "ПЕРЕЗАПИСАТЬ ПРЕДЫДУЩЕЕ УВЕЛИЧЕНИЕ",
+      "DESCRIPTION": "Если включено, Upscayl снова обработает изображение вместо того, чтобы загружать его напрямую."
+    },
+    "RESET_SETTINGS": {
+      "BUTTON_TITLE": "СБРОСИТЬ UPSCAYL",
+      "ALERT": "Upscayl был сброшен. Пожалуйста, перезапустите приложение."
+    },
+    "SAVE_OUTPUT_FOLDER": {
+      "TITLE": "СОХРАНИТЬ ПАПКУ ВЫВОДА",
+      "DESCRIPTION": "Если включено, папка вывода будет запоминаться между сеансами."
+    },
+    "THEME": {
+      "TITLE": "ТЕМА UPSCAYL"
+    },
+    "LANGUAGE": {
+      "TITLE": "ЯЗЫК UPSCAYL"
+    },
+    "CUSTOM_TILE_SIZE": {
+      "TITLE": "ПОЛЬЗОВАТЕЛЬСКИЙ РАЗМЕР ПЛИТКИ",
+      "DESCRIPTION": "Используйте пользовательский размер плитки для сегментации изображения. Это может помочь ускорить обработку изображений за счет уменьшения количества генерируемых плиток."
+    },
+    "TURN_OFF_NOTIFICATIONS": {
+      "TITLE": "ВЫКЛЮЧИТЬ УВЕДОМЛЕНИЯ",
+      "DESCRIPTION": "Если включено, Upscayl не будет отправлять системные уведомления о завершении или ошибках."
+    },
+    "SUPPORT": {
+      "TITLE": "Возникли проблемы?",
+      "DOCS_BUTTON_TITLE": "🙏 ПОЛУЧИТЬ ПОМОЩЬ",
+      "EMAIL_BUTTON_TITLE": "📧 НАПИСАТЬ РАЗРАБОТЧИКУ"
+    }
+  },
+  "APP": {
+    "TITLE": "Upscayl",
+    "BATCH_MODE": {
+      "TITLE": "Пакетное увеличение",
+      "DESCRIPTION": "Это позволит вам увеличить все файлы в папке сразу"
+    },
+    "FILE_SELECTION": {
+      "TITLE": "Шаг 1",
+      "BATCH_MODE_TYPE": "Выбрать папку",
+      "SINGLE_MODE_TYPE": "Выбрать изображение"
+    },
+    "MODEL_SELECTION": {
+      "TITLE": "Шаг 2",
+      "DESCRIPTION": "Выберите модель",
+      "MODELS": {
+        "x4plus": "Общая Фотография (Real-ESRGAN)",
+        "x4fast": "Общая Фотография (Быстрый Real-ESRGAN)",
+        "remacri": "Общая Фотография (Remacri)",
+        "ultramix": "Общая Фотография (Ultramix Balanced)",
+        "ultrasharp": "Общая Фотография (Ultrasharp)",
+        "anime": "Цифровое Искусство"
+      }
+    },
+    "DOUBLE_UPSCAYL": {
+      "TITLE": "Двойное увеличение",
+      "DESCRIPTION": "Включите эту опцию, чтобы дважды увеличить изображение. Обратите внимание, что это может значительно увеличить время обработки и, возможно, вызвать проблемы с производительностью для масштабов больше 4X."
+    },
+    "OUTPUT_PATH_SELECTION": {
+      "TITLE": "Шаг 3",
+      "MAC_APP_STORE_ALERT": "Из-за ограничений безопасности MacOS App Store Upscayl требует выбора папки вывода каждый раз при запуске.\n\nЧтобы избежать этого, вы можете навсегда сохранить папку вывода по умолчанию на вкладке «Настройки» Upscayl.",
+      "NOT_SELECTED": "Не выбрано",
+      "DEFAULT_IMG_PATH": "По умолчанию путь изображения",
+      "DEFAULT_FOLDER_PATH": "По умолчанию путь папки",
+      "BUTTON_TITLE": "Установить папку вывода"
+    },
+    "SCALE_SELECTION": {
+      "TITLE": "Шаг 4",
+      "FROM_TITLE": "Увеличить с ",
+      "TO_TITLE": " до ",
+      "NO_OUTPUT_FOLDER_ALERT": "Пожалуйста, сначала выберите папку вывода",
+      "START_BUTTON_TITLE": "Увеличить",
+      "IN_PROGRESS_BUTTON_TITLE": "Увеличение⏳"
+    },
+    "IMAGE_OPTIONS": {
+      "RESET_BUTTON_TITLE": "Сбросить изображение",
+      "LENS_VIEW_TITLE": "Просмотр через линзу",
+      "SLIDER_VIEW_TITLE": "Просмотр с ползунком",
+      "ZOOM_AMOUNT_TITLE": "Увеличение",
+      "LENS_SIZE_TITLE": "Размер линзы"
+    },
+    "PROGRESS_BAR": {
+      "BATCH_UPSCAYL_IN_PROGRESS_TITLE": "Пакетное увеличение в процессе:",
+      "IN_PROGRESS_TITLE": "Магия увеличения в процессе...",
+      "STOP_BUTTON_TITLE": "СТОП"
+    },
+    "RESET_BUTTON_TITLE": "Сбросить",
+    "RIGHT_PANE_INFO": {
+      "SELECT_FOLDER": "Выберите папку для увеличения",
+      "SELECT_IMAGE": "Выберите изображение для увеличения",
+      "SELECT_FOLDER_DESCRIPTION": "Убедитесь, что в папке нет ничего, кроме изображений PNG, JPG, JPEG и WEBP.",
+      "SELECT_IMAGES_DESCRIPTION": "Выберите или перетащите изображение в формате PNG, JPG, JPEG или WEBP."
+    },
+    "PROGRESS": {
+      "PROCESSING_TITLE": "Обработка изображения...",
+      "SCALING_CONVERTING_TITLE": "Масштабирование и конвертация изображения...",
+      "WAIT_TITLE": "Пожалуйста, подождите...",
+      "SUCCESS_TITLE": "Увеличение успешно!",
+      "BATCH": {
+        "SELECTED_FOLDER_TITLE": "Выбранная папка:",
+        "DONE_TITLE": "Все готово!",
+        "OPEN_UPSCAYLED_FOLDER_TITLE": "Открыть папку с увеличенными изображениями"
+      }
+    },
+    "SLIDER": {
+      "ORIGINAL_TITLE": "Оригинал",
+      "UPSCAYLED_TITLE": "Увеличено"
+    },
+    "DIALOG_BOX": {
+      "CLOSE": "Закрыть"
+    }
+  },
+  "ERRORS": {
+    "GPU_ERROR": {
+      "TITLE": "Ошибка GPU",
+      "DESCRIPTION": "Произошла проблема с GPU. Пожалуйста, прочитайте документацию для устранения неполадок! ({data})"
+    },
+    "COPY_ERROR": {
+      "TITLE": "Ошибка копирования",
+      "DESCRIPTION": ""
+    },
+    "READ_WRITE_ERROR": {
+      "TITLE": "Ошибка чтения/записи",
+      "DESCRIPTION": "Убедитесь, что путь указан правильно и у вас есть необходимые права на чтение/запись \n({data})"
+    },
+    "TILE_SIZE_ERROR": {
+      "TITLE": "Ошибка",
+      "DESCRIPTION": "Неправильный размер плитки. Пожалуйста, измените размер плитки в настройках или установите значение 0 ({data})"
+    },
+    "EXCEPTION_ERROR": {
+      "TITLE": "Ошибка исключения",
+      "DESCRIPTION": "Upscayl столкнулся с ошибкой. Возможно, двоичный файл upscayl не смог правильно выполнить команды. Попробуйте проверить логи, чтобы узнать больше информации. Вы можете оставить запрос в репозитории GitHub Upscayl для получения дополнительной помощи."
+    },
+    "GENERIC_ERROR": {
+      "TITLE": "Ошибка"
+    },
+    "INVALID_IMAGE_ERROR": {
+      "TITLE": "Неверное изображение",
+      "DESCRIPTION": "Пожалуйста, выберите изображение с правильным расширением, таким как PNG, JPG, JPEG или WEBP.",
+      "ADDITIONAL_DESCRIPTION": "Пожалуйста, перетащите изображение"
+    },
+    "NO_IMAGE_ERROR": {
+      "TITLE": "Изображение не выбрано",
+      "DESCRIPTION": "Пожалуйста, выберите изображение для увеличения"
+    },
+    "OPEN_DOCS_TITLE": "Открыть документацию",
+    "OPEN_DOCS_BUTTON_TITLE": "Устранение неполадок"
+  },
+  "UPSCAYL_CLOUD": {
+    "COMING_SOON": "Скоро будет доступно!",
+    "CATCHY_PHRASE_1": "Больше никаких ошибок, проблем с оборудованием, компромиссов в качестве или долгих загрузок!",
+    "CATCHY_PHRASE_2": "🌐 Upscayl где угодно, в любое время, на любом устройстве\n☁️ Не требуется видеокарта или оборудование\n👩 Улучшение лиц\n🦋 Более 10 моделей на выбор\n🏎 В 5 раз быстрее, чем настольная версия Upscayl\n🎞 Увеличение видео\n💰 Коммерческое использование\n😴 Увеличивайте, пока спите",
+    "ALREADY_REGISTERED_ALERT": "Спасибо, {name}! Похоже, ваш email уже зарегистрирован :D Если это не так, пожалуйста, попробуйте снова.",
+    "ADD_SUCCESS": "Спасибо за присоединение к списку ожидания! Мы уведомим вас, когда Upscayl Cloud будет готов для вас.",
+    "INCORRECT_FIELDS_ALERT": "Пожалуйста, правильно заполните все поля.",
+    "JOIN_WAITLIST": "Присоединиться к списку ожидания",
+    "DONT_SHOW_AGAIN": "БОЛЬШЕ НЕ ПОКАЗЫВАТЬ"
   }
 }
